--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
 		<title>React Tutorials</title>
 		<!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
 		<link href="./css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
-	  </head>
+	  <link href="./css/style.css" type="text/css" rel="stylesheet"/>
+		</head>
 
 	  <body>
 		<div id="app"></div>
